Reminder date and delete functionality are added

--- a/exampleApp/app/src/main/res/layout/activity_edit.xml
+++ b/exampleApp/app/src/main/res/layout/activity_edit.xml
@@ -1,23 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Notas y Recordatorios"
+        android:textSize="40dp"
+        android:layout_marginBottom="20dp"/>
 
     <EditText
-        android:id="@+id/edit_message"
+        android:id="@+id/noteReminder"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Escribe una nota" />
+        android:layout_height="wrap_content"
+        android:hint="Escribe una nota"
+        android:layout_marginBottom="20dp"/>
 
     <Switch
         android:id="@+id/isReminder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recordatorio" />
+        android:text="Es Recordatorio"
+        android:onClick="onChange"
+        android:layout_marginBottom="20dp" />
+
+    <DatePicker
+        android:id="@+id/reminderDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner"
+        android:visibility="gone"
+        android:layout_marginBottom="20dp" />
 
     <Button
         android:layout_width="match_parent"
