--- a/exampleApp/app/src/main/res/layout/note_row.xml
+++ b/exampleApp/app/src/main/res/layout/note_row.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/noteCard"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +32,6 @@
                     android:drawablePadding="20dp"
                     android:padding="10dp"
                     android:text="TextView"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:textSize="20dp"/>
 
                 <TextView
@@ -44,7 +43,6 @@
                     android:drawableLeft="@drawable/baseline_calendar_month_24"
                     android:padding="10dp"
                     android:text="TextView"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:visibility="gone"
                     android:drawablePadding="20dp"
                     android:textSize="15dp" />
